# Patients

./: CMakeLists.txt  documentation.docx
Application/: CMakeLists.txt
Application/Client/: ConnectHandler.h  Doctor.h
Application/files/: path.h
Application/include/: App.h  Button.h  Historyes.h  Input.h  InputDrugs.h  MessageWindow.h
Application/src/: App.cpp  CMakeLists.txt  Historyes.cpp  InputDrugs.cpp  main.cpp
Client/: CMakeLists.txt  ConnectHandler.h  Doctor.h  main.cpp
Client/Application/: App.h  Button.h  Historyes.h  Input.h  InputDrugs.h  MessageWindow.h
Server/: CMakeLists.txt  ConnectionHandler.h  DataBaseWorker.cpp  Patient.h  Queue.h  main.cpp
Server/include/: ConnectionHandler.h  DataBaseWorker.h  PatientController.h
Server/src/: CMakeLists.txt  ConnectionHandler.cpp  DataBaseWorker.cpp  main.cpp
